objects/Constituent_Code__c.object
<CustomObject><fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Constituent Codes</relationshipLabel>
        <relationshipName>Constituent_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Date_From__c</fullName>
        <label>Date From</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Date_To__c</fullName>
        <label>Date To</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Long_Code__c</fullName>
        <label>Long Code</label>
        <picklist>
            <picklistValues>
                <fullName>Advertisers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambassador Society Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas Duck Producers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board of Directors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bryan College Investment Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Busted Shoulder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cumulative Lifetime Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dallas Ducks 100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honorary Directors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lifetime Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnedosa Duck Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Gift Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prairie Grass Duck Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shreveport/Bossier City Inv. Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waterfowl Legacy Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waterfowl Research Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly Auto-Pay Member</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Short_Code__c</fullName>
        <label>Short Code</label>
        <picklist>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADVERT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMBSOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCIG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRDDIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUMULT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HONDIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIFEMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTRSTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBCIG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WLF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WRF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Constituent Code</label><nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Constituent Code Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Constituent Codes</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>